<package format="2">
  <name>rviz_robot_description_topic</name>
  <version>1.0.0</version>
  <description>RobotModel display using a `/robot_description` topic instead of a parameter</description>
  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>
  <license>Apache 2.0</license>

  <url>https://github.com/nobleo/rviz_robot_description_topic</url>
  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>rviz</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
